<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wish</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="yuanwang">愿望</string>
    <string name="beizhu">备注</string>
    <string name="yiwancheng">已完成</string>
    <string name="xuyuanriqi">许愿时间</string>
    <string name="wanchengriqi">结束日期</string>
    <string name="jieshuyuanyin">结束原因</string>
    <string name="xuyuan">许愿</string>
    <string name="yuanwangzhuangtai">愿望状态</string>
    <string name="status_open">进行中</string>
    <string name="status_achieve">已达成</string>
    <string name="status_cannot_achieve">无法完成</string>
    <string name="status_cancel">取消</string>

    <string-array name="status_items">
        <item>进行中</item>
        <item>已达成</item>
        <item>无法完成</item>
        <item>取消</item>
    </string-array>
    
    <string name="back">返回</string>
    <string name="commit">提交</string>

</resources>